--- a/web_static/home.html
+++ b/web_static/home.html
@@ -13,12 +13,14 @@
 			<li id="head-links">Home</li>
 			<li id="head-links">Products</li>
 			<li id="head-links">About</li>
-			<li id="head-links">Account</li>
+			<li id="head-links">Account</li>			
 		</ul>
 	</header>
 	<section>
 		<div class="banner">
 			<img src="images/banner-img.jpg">
+			<h1>Connecting people to Fresh Farm products</h1>
+			<h2>Sign up</h2>
 	
 		</div>
 	</section>
